# scalable-enterprise-rag

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SYSTEM-DESIGN.md
docs/adr/: 0001-dual-path-offline-online.md  0002-risk-classification-first.md  0003-hybrid-acl-freshness.md
docs/architecture/: README.md  enterprise-rag-lld.drawio
scripts/: demo.sh
src/enterprise_rag/: __init__.py  api.py  metrics.py  offline.py  online.py  risk.py  system.py  types.py
tests/: test_rag.py
